# chess-engine

./: pyproject.toml
chess_engine/: assets.py  board.py  main.py
tests/: test_chess_engine.py
