[tool.poetry]
name = "chess-engine"
version = "0.1.0"
description = ""
authors = ["petevdp <pjvanderpol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.5"
ipython = "^7.15.0"
pylint = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
